# QScript

./: Cargo.toml
src/: lexing.rs  main.rs  models.rs  utils.rs
src/lexing/: dfsa.rs  lexer.rs  transition.rs
src/models/: core.rs
src/models/core/: token.rs
tests/: bell_state.sq
