[package]
name = "qscript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["cargo", "derive"] }
console = "0.15.8"
thiserror = "1.0.63"

[dev-dependencies]
assert_matches = "1.5.0"
rstest = "0.22.0"
